k8s/loadbalance/mongo.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mongo
  namespace: kong
spec:
  serviceName: "mongo"
  replicas: 3
  template:
    metadata:
      labels:
        role: mongo
        environment: test
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: registry.ckmro.com:1180/library/mongo
          command:
            - mongod
            - "--replSet"
            - rs0
            - "--logpath"
            - "/data/db/mongod.log"
            - "--wiredTigerCacheSizeGB"
            - '1'
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: datadir
              mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi

---
# Headless service for the StatefulSet members
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: kong
  labels:
    role: mongo
spec:
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    role: mongo
