k8s/loadbalance/traefik-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: gojobs
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: gojobs
spec:
  rules:
  - host: traefik-ui.local
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 80
